# flux-check-py

./: README.md  pyproject.toml
examples/: automotive_data.csv  example_usage.py  graph_example.json
flux_check/: __init__.py  __main__.py  cli.py  core.py  demo.py  fracture.py  presets.py  sediment.py
flux_check.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
flux_constraint_check.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_core.py  test_fracture.py  test_presets.py  test_sediment.py
