[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-constraint-check"
version = "0.1.0"
description = "FLUX constraint engine CLI — zero false negatives, vectorized batch, fracture-coalesce"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.scripts]
flux-constraint-check = "flux_check.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["flux_check*"]
